syntax = "proto3";
package edges;

option go_package = "github.com/snple/kokomi/pb/edges;edges";

import "device_message.proto";
import "generic_message.proto";

service DeviceService {
    rpc Update(pb.Device) returns (pb.Device) {}
    rpc View(pb.MyEmpty) returns (pb.Device) {}
    rpc Destory(pb.MyEmpty) returns (pb.MyBool) {}
    rpc ViewWithDeleted(pb.MyEmpty) returns (pb.Device) {}
    rpc Sync(pb.Device) returns (pb.MyBool) {}
}
